chore: prep release

--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@ async function init(){
   const discordBtn = document.getElementById('joinDiscord');
   if (discordBtn) {
     discordBtn.addEventListener('click', ()=>{
-      window.launcher.openLink('https://discord.gg/sMYbKGaM');
+      window.launcher.openLink('https://discord.gg/JBWMagt73u');
     });
   }
 
